package mei.designpattern.creational.facade.structure;

public class SubsystemA {
    public void methodA() {}
}
