package mei.designpattern.creational.facade.structure;

public class SubsystemB {
    public void methodB() {}
}
