package mei.designpattern.creational.facade.structure;

public class SubsystemC {
    public void methodC() {}
}
